# IOWA_esp32

./: .gitignore  .gitmodules  README.md
PlatformIO/: CMakeLists.txt  platformio.ini
PlatformIO/main/: CMakeLists.txt  Kconfig.projbuild
components/esp_iowa/: CMakeLists.txt  Kconfig  component.mk
components/esp_iowa/esp32_hal/: connection_abstraction.c  core_abstraction.c  iowa_config.h
esp_idf/ESP32_01_baseline_client/: Makefile
esp_samples/01-baseline_client/: CMakeLists.txt  Makefile
esp_samples/01-baseline_client/main/: Kconfig.projbuild  main.c
esp_samples/ESP32_01_baseline_client/: CMakeLists.txt
esp_samples/ESP32_01_baseline_client/main/: main.c
esp_samples/ESP32_02_LED/: CMakeLists.txt  Makefile
esp_samples/ESP32_02_LED/main/: Kconfig.projbuild  main.c
