idf_component_register(
        SRCS
                "./esp32_hal/core_abstraction.c"
                "./esp32_hal/connection_abstraction.c"
                "./iowa_code/iowa/src/coap/iowa_block.c"
                "./iowa_code/iowa/src/coap/iowa_coap.c"
                "./iowa_code/iowa/src/coap/iowa_coap_lorawan.c"
                "./iowa_code/iowa/src/coap/iowa_coap_sms.c"
                "./iowa_code/iowa/src/coap/iowa_coap_tcp.c"
                "./iowa_code/iowa/src/coap/iowa_coap_udp.c"
                "./iowa_code/iowa/src/coap/iowa_coap_utils.c"
                "./iowa_code/iowa/src/coap/iowa_message.c"
                "./iowa_code/iowa/src/coap/iowa_option.c"
                "./iowa_code/iowa/src/coap/iowa_peer.c"
                "./iowa_code/iowa/src/coap/iowa_prv_coap.h"
                "./iowa_code/iowa/src/coap/iowa_prv_coap_internals.h"
                "./iowa_code/iowa/src/coap/iowa_transaction.c"
                "./iowa_code/iowa/src/comm/iowa_comm.c"
                "./iowa_code/iowa/src/comm/iowa_prv_comm.h"
                "./iowa_code/iowa/src/core/iowa_base.c"
                "./iowa_code/iowa/src/core/iowa_buffer.c"
                "./iowa_code/iowa/src/core/iowa_client.c"
                "./iowa_code/iowa/src/core/iowa_comms.c"
                "./iowa_code/iowa/src/core/iowa_context.c"
                "./iowa_code/iowa/src/core/iowa_prv_core_check_config.h"
                "./iowa_code/iowa/src/core/iowa_prv_core_internals.h"
                "./iowa_code/iowa/src/core/iowa_prv_timer.h"
                "./iowa_code/iowa/src/core/iowa_server.c"
                "./iowa_code/iowa/src/core/iowa_timer.c"
                "./iowa_code/iowa/src/data/iowa_cbor.c"
                "./iowa_code/iowa/src/data/iowa_data.c"
                "./iowa_code/iowa/src/data/iowa_data_utils.c"
                "./iowa_code/iowa/src/data/iowa_json.c"
                "./iowa_code/iowa/src/data/iowa_prv_data.h"
                "./iowa_code/iowa/src/data/iowa_prv_data_internals.h"
                "./iowa_code/iowa/src/data/iowa_senml_cbor.c"
                "./iowa_code/iowa/src/data/iowa_senml_json.c"
                "./iowa_code/iowa/src/data/iowa_text_opaque.c"
                "./iowa_code/iowa/src/data/iowa_tlv.c"
                "./iowa_code/iowa/src/logger/iowa_logger.c"
                "./iowa_code/iowa/src/logger/iowa_prv_logger.h"
                "./iowa_code/iowa/src/lwm2m/iowa_acl.c"
                "./iowa_code/iowa/src/lwm2m/iowa_attributes.c"
                "./iowa_code/iowa/src/lwm2m/iowa_bootstrap.c"
                "./iowa_code/iowa/src/lwm2m/iowa_core_link.c"
                "./iowa_code/iowa/src/lwm2m/iowa_lwm2m.c"
                "./iowa_code/iowa/src/lwm2m/iowa_lwm2m_utils.c"
                "./iowa_code/iowa/src/lwm2m/iowa_management.c"
                "./iowa_code/iowa/src/lwm2m/iowa_objects.c"
                "./iowa_code/iowa/src/lwm2m/iowa_observe.c"
                "./iowa_code/iowa/src/lwm2m/iowa_packet.c"
                "./iowa_code/iowa/src/lwm2m/iowa_prv_lwm2m.h"
                "./iowa_code/iowa/src/lwm2m/iowa_prv_lwm2m_internals.h"
                "./iowa_code/iowa/src/lwm2m/iowa_registration.c"
                "./iowa_code/iowa/src/lwm2m/iowa_send.c"
                "./iowa_code/iowa/src/lwm2m/iowa_uri.c"
                "./iowa_code/iowa/src/lwm2m/iowa_value.c"
                "./iowa_code/iowa/src/misc/iowa_list.c"
                "./iowa_code/iowa/src/misc/iowa_prv_misc.h"
                "./iowa_code/iowa/src/misc/iowa_utils.c"
                "./iowa_code/iowa/src/objects/iowa_object_accelerometer.c"
                "./iowa_code/iowa/src/objects/iowa_object_acl.c"
                "./iowa_code/iowa/src/objects/iowa_object_apn_connection_profile.c"
                "./iowa_code/iowa/src/objects/iowa_object_at_command.c"
                "./iowa_code/iowa/src/objects/iowa_object_bearer_selection.c"
                "./iowa_code/iowa/src/objects/iowa_object_cellular_connectivity.c"
                "./iowa_code/iowa/src/objects/iowa_object_connectivity_monitoring.c"
                "./iowa_code/iowa/src/objects/iowa_object_connectivity_stats.c"
                "./iowa_code/iowa/src/objects/iowa_object_device.c"
                "./iowa_code/iowa/src/objects/iowa_object_digital_output.c"
                "./iowa_code/iowa/src/objects/iowa_object_firmware.c"
                "./iowa_code/iowa/src/objects/iowa_object_gps.c"
                "./iowa_code/iowa/src/objects/iowa_object_gyrometer.c"
                "./iowa_code/iowa/src/objects/iowa_object_internals.c"
                "./iowa_code/iowa/src/objects/iowa_object_ipso.c"
                "./iowa_code/iowa/src/objects/iowa_object_light_control.c"
                "./iowa_code/iowa/src/objects/iowa_object_location.c"
                "./iowa_code/iowa/src/objects/iowa_object_magnetometer.c"
                "./iowa_code/iowa/src/objects/iowa_object_oscore.c"
                "./iowa_code/iowa/src/objects/iowa_object_security.c"
                "./iowa_code/iowa/src/objects/iowa_object_server.c"
                "./iowa_code/iowa/src/objects/iowa_object_software_component.c"
                "./iowa_code/iowa/src/objects/iowa_object_software_management.c"
                "./iowa_code/iowa/src/objects/iowa_prv_objects.h"
                "./iowa_code/iowa/src/objects/iowa_prv_objects_internals.h"
                "./iowa_code/iowa/src/oscore/iowa_cose.c"
                "./iowa_code/iowa/src/oscore/iowa_oscore.c"
                "./iowa_code/iowa/src/oscore/iowa_prv_oscore_internals.h"
                "./iowa_code/iowa/src/security/iowa_layer_mbedtls.c"
                "./iowa_code/iowa/src/security/iowa_layer_tinydtls.c"
                "./iowa_code/iowa/src/security/iowa_prv_security.h"
                "./iowa_code/iowa/src/security/iowa_prv_security_internals.h"
                "./iowa_code/iowa/src/security/iowa_security.c"
                "./iowa_code/iowa/src/security/iowa_security_helper.c"

        INCLUDE_DIRS
                "./iowa_code/iowa/include"
                "./iowa_code/iowa/include/objects"

        PRIV_INCLUDE_DIRS
		"./esp32_hal"
                "./iowa_code/iowa/src/core"
                "./iowa_code/iowa/src/coap"
                "./iowa_code/iowa/src/comm"
                "./iowa_code/iowa/src/data"
                "./iowa_code/iowa/src/logger"
                "./iowa_code/iowa/src/lwm2m"
                "./iowa_code/iowa/src/misc"
                "./iowa_code/iowa/src/objects"
                "./iowa_code/iowa/src/oscore"
                "./iowa_code/iowa/src/security"

        PRIV_REQUIRES
                lwip )

# Temporary suppress "fallthrough" warnings until they are fixed in iowa repo
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-implicit-fallthrough)

set(CONFIG_LWM2M_CLIENT_MODE)
